--- a/src/components/Customers/styles.css
+++ b/src/components/Customers/styles.css
@@ -1,63 +1,112 @@
 .cusMain {
-    display: flex;
-    overflow:hidden
+  display: flex;
+  overflow: hidden;
 }
 .cusContent {
-    width:100%
+  width: 100%;
 }
 .wrapper {
-    padding:25px;
-    display:flex;
-    flex-direction:column;
-    gap: 5rem;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
 }
-.imgNameWrap{
-    display:flex;
-    align-items:center;
-    gap:20px
+.imgNameWrap {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
-.username{
-    color:#5A5F65;
-    font-size:15px
+.username {
+  color: #5a5f65;
+  font-size: 15px;
 }
-.cusName{
-    color:#57BC90;
-    font-size:15px
+.cusName {
+  color: #57bc90;
+  font-size: 15px;
+  text-transform: capitalize;
 }
-/* Modal styles */
+.editBtn {
+  background: rgba(57, 181, 74, 0.4) !important;
+  color: #008212 !important;
+  text-transform: none !important;
+}
+.dltBtn {
+  background: rgba(216, 0, 0, 0.4) !important;
+  color: #d80000 !important;
+  text-transform: none !important;
+}
 .Modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 500px;
-    background-color: none;
-    overflow-y: auto;
-    max-height: 90%;
-    border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  background-color: none;
+  overflow-y: auto;
+  max-height: 90%;
+  border-radius: 10px;
 }
-
-/* Media Queries */
+.dropdownWrap {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 3rem;
+  margin-bottom: 1rem;
+}
+.nodataWrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+.allCusTypo {
+  font-weight: 700 !important;
+  color: #57bc90;
+  font-size: 20px !important;
+}
+.addFirstCus {
+  font-weight: 300 !important;
+  color: #57bc90;
+  font-size: 16px !important;
+}
+.addNewCusBtn {
+    background: linear-gradient(105deg, #57BC90, #004B40);
+    color: white !important;
+    padding: 15px !important;
+    width: 250px 
+}
 @media (max-width: 767px) and (min-width: 450px) {
-    .Modal {
-        width: 400px;
-    }
+  .Modal {
+    width: 400px;
+  }
 }
 
 @media (max-width: 449px) and (min-width: 389px) {
-    .Modal {
-        width: 350px;
-    }
+  .Modal {
+    width: 350px;
+  }
 }
 
 @media (max-width: 388px) and (min-width: 330px) {
-    .Modal {
-        width: 300px;
-    }
+  .Modal {
+    width: 300px;
+  }
 }
 
 @media (max-width: 329px) {
-    .Modal {
-        width: 250px;
-    }
+  .Modal {
+    width: 250px;
+  }
+}
+@media (min-width: 960px) {
+  .cusContent {
+    margin-left: 300px;
+  }
+}
+@media(max-width:600px){
+  .dropdownWrap{
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
