--- a/src/components/reusable/styles.css
+++ b/src/components/reusable/styles.css
@@ -1,7 +1,7 @@
 
 .headerMain {
     background: white;
-    height: 100px;
+    height: 75px;
     padding: 15px;
     box-shadow: 0px 3px 15px #6B6B6B1A;
     /* width: 100%; */
@@ -16,9 +16,9 @@
 }
 
 .sidebarMain {
-    /* height: 100vh; */
+    height: 100vh;
     background: #015249;
-    width: 300px;
+    width: 250px;
     border-radius: 0px 20px 20px 0px;
     padding: 30px;
     display: flex;
@@ -35,8 +35,8 @@
 }
 .closeBtn{
     display:flex;
-    align-items: end;
-    justify-content: end;
+    align-items:flex-end;
+    justify-content:flex-end
 }
 .buttonsWrap{
     display:flex;
@@ -61,5 +61,9 @@
 }
 .addCusModalhead{
     background: linear-gradient(105deg, #57BC90, #004B40)
-
+}
+.iconCloseBtnWrap{
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
